# src/auth/auth.controller.ts
@@ -1,4 +1,10 @@
-import { Body, Controller, Post } from '@nestjs/common';
+import {
+  Body,
+  Controller,
+  Post,
+  UploadedFile,
+  UseInterceptors,
+} from '@nestjs/common';
 import {
   ApiAcceptedResponse,
   ApiCreatedResponse,
@@ -9,6 +15,7 @@ import { AuthService } from './auth.service';
 import { UserDto } from 'src/users/dto/user.dto';
 import { UserExample } from 'src/users/users.controller';
 import { Public } from './auth.public.decorator';
+import { FileInterceptor } from '@nestjs/platform-express';
 
 @ApiTags('Authorization')
 @Controller('auth')
@@ -32,7 +39,11 @@ export class AuthController {
     type: UserDto,
     example: UserExample,
   })
-  registration(@Body() userDtoDto: CreateUserDto) {
-    return this.authService.registration(userDtoDto);
+  @UseInterceptors(FileInterceptor('image'))
+  registration(
+    @Body() userDtoDto: CreateUserDto,
+    @UploadedFile() image: Express.Multer.File,
+  ) {
+    return this.authService.registration(userDtoDto, image);
   }
 }
